@startuml Repository Pattern

skinparam classAttributeIconSize 0
skinparam backgroundColor White
skinparam shadowing false
skinparam class {
    BackgroundColor White
    BorderColor Black
    ArrowColor Black
    FontName Arial
    FontSize 11
    HeaderBackgroundColor White
}
skinparam note {
    BackgroundColor White
    BorderColor Black
    FontName Arial
    FontSize 10
}

title Repository Pattern

class GuestManagementForm as Client {
    ..
    ...
}

class GuestRepository as Repository {
    ..
    +Insert(guest: Guest): int
    +GetById(id: int): Guest
    +GetAll(): List<Guest>
    +Update(guest: Guest): bool
    +Delete(id: int): bool
    +Search(searchTerm: string): List<Guest>
}

interface "<<Interface>>\nIRepository<T>" as IRepository {
    ..
    +Insert(entity: T): int
    +GetById(id: int): T
    +GetAll(): List<T>
    +Update(entity: T): bool
    +Delete(id: int): bool
}

class RoomRepository {
    ..
    +GetAvailableRooms(): List<Room>
    +UpdateRoomStatus(id, status): bool
    +GetByRoomNumber(number): Room
}

class BookingRepository {
    ..
    +GetBookingsByGuest(guestId): List<Booking>
    +GetActiveBookings(): List<Booking>
    +CheckIn(bookingId): bool
    +CheckOut(bookingId): bool
    +CancelBooking(bookingId, reason): bool
}

class UserRepository {
    ..
    +Authenticate(username, password): User
    +GetByRole(role: string): List<User>
    +UpdatePassword(userId, hash, salt): bool
}

class DatabaseManager {
    -{static} _instance : DatabaseManager
    ..
    -DatabaseManager()
    +{static} Instance : DatabaseManager
    ..
    +ExecuteQuery(query, params): DataTable
    +ExecuteNonQuery(query, params): int
    +ExecuteScalar(query, params): object
}

Client  o--  Repository  : -guestRepo
Client  -->  IRepository : -repo

Repository      ..|> IRepository
RoomRepository  ..|> IRepository
BookingRepository ..|> IRepository
UserRepository  ..|> IRepository

Repository        --> DatabaseManager : -db
RoomRepository    --> DatabaseManager : -db
BookingRepository --> DatabaseManager : -db
UserRepository    --> DatabaseManager : -db

note "guests = guestRepo.GetAll()" as N1
Client .. N1

note bottom of DatabaseManager
    Shared by all 7 repositories:
    GuestRepository, RoomRepository,
    BookingRepository, InvoiceRepository,
    PaymentRepository, UserRepository,
    HousekeepingTaskRepository
end note

@enduml
